Update to JDK 21 and related deps.